--- a/data_analysis.Rmd
+++ b/data_analysis.Rmd
@@ -2,11 +2,12 @@
 title: "Analysis of Impact of Storms and Severe Weather Changes on Economic and Public Health"
 author: "André Campos <andreloc@gmaill.com>"
 date: "10/14/2017"
-output: 
+output:
   html_document:
     keep_md: yes
     toc: yes
 ---
+
 ## Basic Information and Setup
 
 Information obtained by exploring the U.S. National Oceanic and Atmospheric 
@@ -15,7 +16,27 @@ Administration's (NOAA) storm database
 By André Campos (andreloc@gmail.com)
 Date: 19-14-201
 
-Basic setup of the article renderization. 
+## Synopsis 
+
+Storms and other severe weather events can cause both public health and economic 
+problems for communities and municipalities. Many severe events can result in 
+fatalities, injuries, and property damage, and preventing such outcomes to the 
+extent possible is a key concern. This study will describe the impact of such weather 
+conditions on U.S health and economics. 
+
+### Study Goal 
+
+The basic goal is to explore the NOAA Database and answer the following questions: 
+
+1. Across the United States, which types of events are most harmful with respect to population health?
+2. Across the United States, which types of events have the greatest economic consequences?
+
+This report is intended for government or municipal manager who might be responsible 
+for preparing for severe weather events. 
+
+## Basic setup  
+
+This section briefly show the required libraries. 
 ```{r setup, include = F}
 knitr::opts_chunk$set(echo = TRUE)
 LoadLibrary <- function(lib){
@@ -26,26 +47,12 @@ LoadLibrary("ggplot2")
 LoadLibrary("dplyr")
 LoadLibrary("xtable")
 LoadLibrary("knitr")
+LoadLibrary("gridExtra")
 ```
+This project uses [packrat][4] for dependency management and easly to be deployed 
+in any machine. 
 
-## Introduction 
-
-Storms and other severe weather events can cause both public health and economic 
-problems for communities and municipalities. Many severe events can result in 
-fatalities, injuries, and property damage, and preventing such outcomes to the 
-extent possible is a key concern.
-
-### Study Goal 
-
-The basic goal is to explore the NOAA Storm Database and answer the following questions: 
-
-1. Across the United States, which types of events are most harmful with respect to population health?
-2. Across the United States, which types of events have the greatest economic consequences?
-
-This report is intended for government or municipal manager who might be responsible 
-for preparing for severe weather events. 
-
-## Obtaining and extracting the data 
+## Data Processing
 
 The NOAA database is a compressed CSV file. The data was downloaded in the folloing 
 link [Sorm Data][1]. There is also some documentation of the database available 
@@ -55,7 +62,7 @@ The events in the database start in the year 1950 and end in November 2011. In t
 years of the database there are generally fewer events recorded, most likely due to a lack 
 of good records. More recent years should be considered more complete.
 
-#### Download
+### Download
 
 The following R scripts download and unzip the data from the storm database. 
 ```{r cache = TRUE}
@@ -66,6 +73,7 @@ if(!file.exists(dest.file)){
 }
 dataset <- read.csv(dest.file)
 ```
+
 
 ### Creating the analitical dataset 
 The next step is to remove unused information from the dataset in order to facilitate 
@@ -88,13 +96,13 @@ clean.dataset <- dataset %>% select(EVTYPE, FATALITIES, INJURIES,
                                     CROPDMG, CROPDMGEXP, PROPDMG, PROPDMGEXP) 
 ```
 
-## Analysis
+## Collecting Fine Grained Analytical Data
+The steps below will focus on separting the important data to be used on the 
+analysis of health and economic impact.
 
-The analysis below will focus on answering separetly the health and economic impact. 
+### Across the U.S, which types of events are most harmful with respect to population health?
 
-### Across the United States, which types of events (as indicated in the 𝙴𝚅𝚃𝚈𝙿𝙴 variable) are most harmful with respect to population health?
-
-First, lets group the subset of relevant data.
+First, lets group the subset of relevant data for health impact. 
 ```{r}
 health.impact <- clean.dataset %>% group_by(EVTYPE) %>% summarise(
                         Fatalities = sum(FATALITIES, na.rm = T), 
@@ -104,52 +112,164 @@ health.impact <- clean.dataset %>% group_by(EVTYPE) %>% summarise(
 
 #### Injuries
 
-The top cause of injuries in USA according to NOAA is `{r} head(health.impact.by.injuries$EVTYPE,1)`. 
-The top 5 events are listed below. 
+Now, subselect summarise the injuries. The dataset will be ordered by the top 
+relevant events as shown in the top 10 table below. 
 ```{r top5Injuries, results="asis"}
 health.impact.by.injuries <- health.impact %>% arrange(desc(Injuries))
 top.injuries <- head(health.impact.by.injuries %>% select(Event, Injuries))
 kable(top.injuries, format = "markdown")
 ```
 
-```{r}
-plot(ggplot(data = head(health.impact.by.injuries,20), 
-            aes(x = reorder(Event, -Injuries), y = log10(Injuries))) +
-    geom_bar(stat = "identity", fill="orange", colour = "black") +
-    theme(axis.text.x = element_text(angle = 90, hjust = 1)) + 
-    ggtitle("Top 20 U.S Registered Injuries") +
-    labs(y=expression(log[10](Injuries)), x = "NOAA Event Type"))
-```
-
 #### Fatalities
 
-The top cause of fatalities in USA according to NOAA is `{r} head(health.impact.by.fatalities$EVTYPE,1)`. 
-The top 5 events are listed below. 
+Now, subselect summarise the fatalities. The dataset will be ordered by the top 
+relevant events as shown in the top 10 table below. 
 ```{r top5Fatalities, results="asis"}
 health.impact.by.fatalities <- health.impact %>% arrange(desc(Fatalities))
 top.fatalities <- head(health.impact.by.fatalities %>% select(Event, Fatalities))
 kable(top.fatalities, format = "markdown")
 ```
 
+### Across the U.S, which types of events have the greatest economic consequences?
+
+First, we will need to normalize the property damage and crop damage data into 
+comparable numerical values. As described in the [code book (Storm Events)][2]. 
+Both PROPDMGEXP and CROPDMGEXP columns record a multiplier for each observation 
+where we have Hundred (H), Thousand (K), Million (M) and Billion (B).
+
+The function belows converts the values: 
+```{r cache = T}
+ConvertValueToUnities <- function(value, exp){
+    exp <- trimws(exp)   # remove leading spaces
+    exp <- toupper(exp)  # 
+    switch (
+        as.vector(exp),
+        "H" = 10^2 * value,
+        "K" = 10^3 * value,
+        "M" = 10^6 * value,
+        "B" = 10^9 * value,
+        value
+    )
+}
+
+clean.dataset$CROPDMG.TOTAL <- mapply(ConvertValueToUnities, clean.dataset$CROPDMG, clean.dataset$CROPDMGEXP)
+clean.dataset$PROPDMG.TOTAL <- mapply(ConvertValueToUnities, clean.dataset$PROPDMG, clean.dataset$PROPDMGEXP)
+```
+
+Now the results below group the total finantial impact grouped by the NOAA event. 
+
 ```{r}
-plot(ggplot(data=head(health.impact.by.fatalities,20), aes(x = reorder(Event, -Fatalities), y = log10(Fatalities))) +
+finantial.impact <- clean.dataset %>% group_by(EVTYPE) %>% summarise(
+                        "Crop Impact" = sum(CROPDMG.TOTAL, na.rm = T), 
+                        "Property Impact" = sum(PROPDMG.TOTAL, na.rm = T), 
+                    ) %>% rename("Event" = EVTYPE) %>% 
+                      mutate(`Total Impact` = `Crop Impact`+`Property Impact`) %>% 
+                      arrange(desc(`Total Impact`)) 
+finantial.impact$`Crop Impact` <- round(finantial.impact$`Crop Impact`/1000000000,3)
+finantial.impact$`Property Impact` <- round(finantial.impact$`Property Impact`/1000000000,3)
+finantial.impact$`Total Impact` <- round(finantial.impact$`Total Impact`/1000000000,3)
+```
+
+#### Top Crop Impact (Billions)
+
+```{r top5CropImpact, results="asis"}
+finantial.impact.by.crop <- finantial.impact %>% arrange(desc(`Crop Impact`))
+top.crop.impact <- head(finantial.impact.by.crop %>% select(Event, `Crop Impact`))
+kable(top.crop.impact, format = "markdown")
+```
+
+#### Top Property Impact (Billions)
+
+```{r top5PropertyImpact, results="asis"}
+finantial.impact.by.property <- finantial.impact %>% arrange(desc(`Property Impact`))
+top.property.impact <- head(finantial.impact.by.property %>% select(Event, `Property Impact`))
+kable(top.property.impact, format = "markdown")
+```
+
+#### The total sum of finantial impact
+
+#### Creating Plot Information
+
+```{r}
+injuries.plot <- ggplot(data = head(health.impact.by.injuries,20), 
+            aes(x = reorder(Event, -Injuries), y = log10(Injuries))) +
+    geom_bar(stat = "identity", fill="orange", colour = "black") +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1)) + 
+    ggtitle("Top 20 U.S Registered Injuries") +
+    labs(y=expression(log[10](Injuries)), x = "NOAA Event Type")
+
+fatalities.plot <- ggplot(data=head(health.impact.by.fatalities,20), 
+                          aes(x = reorder(Event, -Fatalities), y = log10(Fatalities))) +
     geom_bar(stat = "identity", fill="red", colour = "black") +
     theme(axis.text.x = element_text(angle = 90, hjust = 1)) + 
     ggtitle("Top 20 U.S Registered Fatalities") +
-    labs(y=expression(log[10](Fatalities)), x = "NOAA Event Type"))
+    labs(y=expression(log[10](Fatalities)), x = "NOAA Event Type")
+
+crop.plot <- ggplot(data = head(finantial.impact.by.crop,10), 
+            aes(x = reorder(Event, -`Crop Impact`), y = `Crop Impact`)) +
+    geom_bar(stat = "identity", fill="green", colour = "black") +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1)) + 
+    ggtitle("Top 10 U.S Crop Impact") +
+    labs(y=expression(Billions), x = "NOAA Event Type")
+
+finantial.plot <- ggplot(data = head(finantial.impact,20), 
+            aes(x = reorder(Event, -`Total Impact`), y = `Total Impact`)) +
+    geom_bar(stat = "identity", fill="yellow", colour = "black") +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1)) + 
+    ggtitle("Top 20 U.S Finantial Impact") +
+    labs(y=expression(log[10](Billions)), x = "NOAA Event Type")
+
+crop.plot <- ggplot(data = head(finantial.impact.by.crop,10), 
+            aes(x = reorder(Event, -`Crop Impact`), y = `Crop Impact`)) +
+    geom_bar(stat = "identity", fill="green", colour = "black") +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1)) + 
+    ggtitle("Top 10 U.S Crop Impact") +
+    labs(y=expression(Billions), x = "NOAA Event Type")
+
+property.plot <- ggplot(data=head(finantial.impact.by.property,10), 
+                          aes(x = reorder(Event, -`Property Impact`), y = `Property Impact`)) +
+    geom_bar(stat = "identity", fill="grey", colour = "black") +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1)) + 
+    ggtitle("Top 10 U.S Property Impact ") +
+    labs(y=expression(Billions), x = "NOAA Event Type")
 ```
 
+## Results 
 
-### Across the United States, which types of events have the greatest economic consequences?
+The final result of the analysis is presented in the following sections. 
 
+### Health Impact 
+
+The top cause of **injuries** in USA according to NOAA is 
+**`r head(health.impact.by.injuries$Event,1)`**. 
+The top cause of **fatalities** in USA according to NOAA is 
+**`r head(health.impact.by.fatalities$Event,1)`**. 
+
+```{r}
+grid.arrange(injuries.plot, fatalities.plot, ncol = 2)
+```
+
+### Finantial Impact 
+The highest finantial impact was caused by `r head(finantial.impact$Event,1)`. 
+The finantial impact can be subdivided into Crop and Property impacts, which are detailed below. 
+
+```{r}
+grid.arrange(crop.plot, property.plot, ncol = 2)
+```
+
+The main total impact is presented in the graph below. 
+```{r}
+plot(finantial.plot)
+```
 
 ## Important Links
 
 - [NOAA Database][1]
 - [National Weather Service Storm Data Documentation][2]
 - [NOAA Database FAQ][3]
+- [Package manager][4]
 
 [1]: https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2FStormData.csv.bz2
 [2]: https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2Fpd01016005curr.pdf
 [3]: https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2FNCDC%20Storm%20Events-FAQ%20Page.pdf
-
+[4]: https://rstudio.github.io/packrat/ 
