- Adding libraries for rpubs  - Fianl adjustments

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Analysis of Impact of Storms and Severe Weather Changes on Economic and Public Health"
+title: "Impact of Storms and Severe Weather Changes on Economic and Public Health"
 author: "André Campos <andreloc@gmaill.com>"
 date: "10/14/2017"
 output:
@@ -7,11 +7,6 @@ output:
     keep_md: yes
     toc: yes
 ---
-
-## Basic Information and Setup
-
-Information obtained by exploring the U.S. National Oceanic and Atmospheric 
-Administration's (NOAA) storm database
 
 By André Campos (andreloc@gmail.com)
 Date: 19-14-201
@@ -22,7 +17,8 @@ Storms and other severe weather events can cause both public health and economic
 problems for communities and municipalities. Many severe events can result in 
 fatalities, injuries, and property damage, and preventing such outcomes to the 
 extent possible is a key concern. This study will describe the impact of such weather 
-conditions on U.S health and economics. 
+conditions on U.S health and economics. The study is based on the National 
+Oceanic and Atmospheric Administration's (NOAA) storm database. 
 
 ### Study Goal 
 
